--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,10 +1,38 @@
 ---
-import Hamburger from "./Hamburger.vue";
+const links = [
+	{
+		name: "Home",
+		url: "/home",
+	},
+	{
+		name: "Works",
+		url: "/works",
+	},
+	{
+		name: "About",
+		url: "/about",
+	},
+];
 ---
 
-<header class="w-full p-4 fixed top-0">
-  <nav class="max-w-custom mx-auto flex justify-between items-center py-1">
-    <div id="logo" class="font-headerFont text-xl">Phait-OT</div>
-    <Hamburger />
-  </nav>
+<header class="w-full p-4 fixed top-0 bg-white">
+	<nav class="max-w-custom mx-auto grid place-content-center gap-8 py-8">
+		<div
+			id="logo"
+			class="font-headerFont text-[2.5rem] text-center md:text-[3.5rem]"
+		>
+			Phait-OT
+		</div>
+		<div>
+			<ul class="flex justify-between">
+				{
+					links.map((el) => (
+						<li>
+							<a href={el.url}>{el.name}</a>
+						</li>
+					))
+				}
+			</ul>
+		</div>
+	</nav>
 </header>
