--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,8 +5,8 @@ const links = [
 		url: "/home",
 	},
 	{
-		name: "Works",
-		url: "/works",
+		name: "Projects",
+		url: "/projects",
 	},
 	{
 		name: "About",
@@ -15,20 +15,20 @@ const links = [
 ];
 ---
 
-<header class="w-full p-4 fixed top-0 bg-white">
-	<nav class="max-w-custom mx-auto grid place-content-center gap-8 py-8">
+<header class="w-full p-4 fixed top-0 z-[3] bg-white">
+	<nav class="max-w-custom mx-auto grid gap-8 py-8">
 		<div
 			id="logo"
 			class="font-headerFont text-[2.5rem] text-center md:text-[3.5rem]"
 		>
 			Phait-OT
 		</div>
-		<div>
-			<ul class="flex justify-between">
+		<div class="place-self-center w-[60%]">
+			<ul class="flex justify-between md:justify-evenly">
 				{
 					links.map((el) => (
-						<li>
-							<a href={el.url}>{el.name}</a>
+						<li class="opacity-60 duration-200 hover:opacity-100">
+							<a class="uppercase" href={el.url}>{el.name}</a>
 						</li>
 					))
 				}
