create component for the home page details

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
+import HomePage from "../components/Home.astro"
 import SiteLayout from "../layout/SiteLayout.astro"
 ---
 <SiteLayout>
-  <section>
-    <h1>Home Page</h1>
-  </section>
+  <HomePage />
 </SiteLayout>
