create footer section

--- a/src/layout/SiteLayout.astro
+++ b/src/layout/SiteLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/NavBar.astro";
+import FooterSection from "../components/Footer.astro"
 ---
 
 <!DOCTYPE html>
@@ -7,6 +8,7 @@ import Header from "../components/NavBar.astro";
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="generator" content={Astro.generator} />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -18,6 +20,7 @@ import Header from "../components/NavBar.astro";
     <main class="mt-20">
       <slot />
     </main>
+    <FooterSection />
   </div>
 </body>
 </html>
